--- a/src/components/CoffeeInput.css
+++ b/src/components/CoffeeInput.css
@@ -1,8 +1,14 @@
 
-.input__section {
+/* .input__section {
   display: flex;
-}
+} */
 
-input__section--text {
-  margin-left: 10px;
-}
+/* input__section--text {
+  margin-left: 10px; 
+  width: 200px;
+  height: 30px;
+  border-radius: 10px;
+  padding: 7px 15px;
+  background-color: #7189F7;
+  border: 1px solid white;
+} */
