--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -1,12 +1,28 @@
+.calendar__section {
+  margin-top: 40px;
+}
+
 .calendar {
   height: 300px;
+  /* width: 90%; */
 }
 
 .react-calendar_custom {
   background-color: white;
-  width: 380px;
+  /* width: 380px; */
+  width: 100%;
   padding: 5px;
   border-radius: 10px;
-  border: 1.5px solid #CCEFCC;
+  border: 1.5px solid #F3605F;
   margin-top: 20px;
+  box-shadow: 4.7px 9.4px 9.4px hsl(0deg 0% 0% / 0.15);
+}
+
+.react-calendar__tile--active {
+  background-color: #F3605F;
+  border-radius: 6px;
+}
+
+.react-calendar__tile--active:enabled:focus {
+  background-color: #F3605F;
 }
