--- a/src/components/ConfirmButton.css
+++ b/src/components/ConfirmButton.css
@@ -3,12 +3,18 @@
 }
 
 .confirm__button--btn {
-  width: 250px;
-  height: 50px;
+  /* width: 360px; */
+  width: 100%;
+  height: 60px;
+  /* text-transform: uppercase; */
+  /* letter-spacing: .08em; */
   border-radius: 10px;
-  background-color: #F98E67;
+  background-color: #F3605F;
+  color: white;
   border: none;
-  font-size: 1.2em;
+  font-size: 1.1em;
+  font-weight: 500;
   text-align: left;
   padding-left: 20px;
+  box-shadow: 2.7px 7.4px 7.4px hsl(0deg 0% 0% / 0.15);
 }
