--- a/src/components/DarkMode.css
+++ b/src/components/DarkMode.css
@@ -1,29 +1,29 @@
-#darkMode {
-  /* width: 45px;
-  height: 45px;
-  background-color: rgb(122, 81, 237);
-  border-radius: 50%;
-  border: none; */
+.darkmode {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 6px;
+}
 
+#darkMode {
   height: 50px;
-  width: 100px;
+  width: 80px;
   border-radius: 50px;
   display: flex;
   justify-content: flex-end;
-  background-color: #CBEFCC;
+  /* background-color: #F68460; */
+  border: 2px solid #F68460; 
+  /* background-color: #F3605F; */
   position: relative;
   cursor: pointer;
+  margin-top:10px
 }
-
-/* #darkMode.dark {
-  background-color: blue
-} */
 
 .toggle__notch {
   height: 45px;
   width: 45px;
   border-radius: 50%;
-  background-color: #7189F7;
+  /* background-color: #F68460; */
+  background-color: #F3605F;
   position: absolute;
   top: 3px;
   left: 4px;
@@ -32,31 +32,51 @@
 }
 
 .toggle__notch:hover {
-  background-color: #F98E67;
-  transform: translate(50px, 0)
+  /* background-color: #F68460; */
+  background-color: #F3605F;
+  transform: translate(30px, 0)
 }
 
-/* Light theme - Yellow body background */
+/* LIGHT THEME - pink body background */
 body.light {
-  background-color: rgb(249, 222, 156);
-  color: black;
+  background-color: #F6ABAB;
+  color: #691A15;
+  background-image: url('../images/bkgd-image-light.jpg');
+  transition: ease .1s
 }
 
 .light .intro__section--heading{
-  color: black;
+  color: #691A15;
+}
+
+.light .page {
+  background-color: #FBD5D5;
+  border: .5px dotted #ce9999;
+  transition: ease .3s;
+  box-shadow: 10px 10px #763333;
 }
 
 .light .page__text {
-  color: black;
+  color: #691A15;
 }
 
-/* Dark theme - Blue body background */
+
+/* DARK THEME - Chocolate body background */
 body.dark {
-  background-color: #7189F7;
-  /* color: yellow */
+  background-color: #300b07;
+  transition: ease .3s;
+  background-image: url('../images/bkgd-image-dark.jpg')
 }
 
 .dark .page {
-  background-color:#8ba0fa;
+  background-color:#450D0D;
+  transition: ease .3s;
+  border: .5px dotted #b56d6d;
+  /* box-shadow: 10px 10px #fc987a; */
+  box-shadow: 10px 10px #F3605F
 }
 
+.dark .clear-item {
+  background-color: #300b07;
+  color: white;
+}
