--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,11 @@
 .header__nav {
   display: flex;
   justify-content: space-between;
+  margin: -60px 0 40px 0;
+}
+
+.header__nav img {
+  width: 200px;
 }
 
 @media screen and (max-device-width: 480px) {
