--- a/src/components/InputAmount.css
+++ b/src/components/InputAmount.css
@@ -2,17 +2,21 @@
 .input__section {
   display: flex;
   justify-content: space-between;
-  width: 350px;
+  width: 100%;
 }
 
-
 .input__section--field {
-  width: 200px;
+  width: 100%;
   height: 30px;
   border-radius: 10px;
   padding: 7px 15px;
-  background-color: #7189F7;
-  border: 1px solid white;
+  background-color: #F3605F;
+  /* background-color: #F68460; */
+  border: none;
+  color: white;
+  font-weight: 500;
+  font-size: 1.1em;
+  margin-top: 20px;
 }
 
 .input__section--field::placeholder {
