--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -1,6 +1,8 @@
-/* .intro__section {
-  color: white;
-} */
+
+.intro__section {
+  margin: 60px 0 0 0;
+  /* max-width: 390px; */
+}
 
 .intro__section--heading {
   font-size: 1.4em;
