--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -1,34 +1,49 @@
 body {
-  /* background-color: #7189F7; */
   padding: 100px 0;
+  font-family: "Archivo", sans-serif;
+  background-image: url("../images/coffee_bkg_img.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .page {
-  width: 80%;
-  margin: 0 auto;
-  padding: 50px 0 40px 40px;
-  border: 1px solid red;
+  width: 400px;
+  /* width: 80%; */
+  margin: 0 100px;
+  padding: 50px 20px 40px 20px;
   border-radius: 40px;
-  background-color: #7189F7;
-  /* background-color: rgba(140, 159, 245, 0.5); */
-  /* box-shadow: 3.2px 6.4px 6.4px hsl(0deg 0% 0% / 0.20); */
-  box-shadow: 4.7px 9.4px 9.4px hsl(0deg 0% 0% / 0.35);
-
-
 }
 
-/* .page__dark {
-  background-color: #323a5e;
-} */
 
 .page__text {
-  color: rgb(247, 246, 246)
+  color: rgb(247, 246, 246);
 }
 
+.clear-item {
+  position: relative;
+  left: 290px;
+  margin-right: 5px;
+  background-color: #fbd5d5;
+  border-radius: 7px;
+  border: 1px solid #F3605F;
+  font-size: 0.9em;
+  padding: 7px 7px;
+  color: #300b07;
+}
 
-
-/* @media screen and (max-device-width: 480px) {
-  .page {
-    max-width: 420px;
+@media screen and (max-device-width: 420px) {
+  body {
+    padding: 0;
   }
-} */
+
+  .page {
+    max-width: 90%;
+    margin: 0 auto;
+    border-radius: 0;
+  }
+
+  .clear-item {
+    position: relative;
+    left: 60vw;
+  }
+}
