Fonts added, local storage revised with date and amount, changes to confirm btn, coffee input and input amount, coffee saver and css revisions

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -14,10 +14,13 @@ body {
   border-radius: 40px;
 }
 
-
 .page__text {
   color: rgb(247, 246, 246);
 }
+
+/* h4 {
+  font-weight: 300;
+} */
 
 .clear-item {
   position: relative;
