--- a/src/components/ConfirmButton.css
+++ b/src/components/ConfirmButton.css
@@ -1,20 +1,30 @@
 .confirm__button {
   margin-top: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .confirm__button--btn {
-  /* width: 360px; */
   width: 100%;
+  /* width: 65%; */
+  /* height: 90px; */
+  margin-top: 10px;
   height: 60px;
-  /* text-transform: uppercase; */
-  /* letter-spacing: .08em; */
-  border-radius: 10px;
-  background-color: #F3605F;
-  color: white;
-  border: none;
-  font-size: 1.1em;
-  font-weight: 500;
-  text-align: left;
-  padding-left: 20px;
-  box-shadow: 2.7px 7.4px 7.4px hsl(0deg 0% 0% / 0.15);
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: .04em;
+  border-radius: 15px;
+  background-color: #c24040;
+  color: #fcdede;
+  border: 2px solid #f5d2d2;
+  font-size: 1.2em;
+  font-weight: 400;
+  /* padding-left: 20px; */
+  box-shadow: 4.7px 9.4px 9.4px hsl(0deg 0% 0% / 0.15);
+  transition: .2s ease-in-out;
+}
+
+.confirm__button--btn:hover {
+  box-shadow: 1.7px 1.4px 1.4px hsl(0deg 0% 0% / 0.15);
+
 }
