--- a/src/components/InputAmount.css
+++ b/src/components/InputAmount.css
@@ -1,3 +1,10 @@
+.input__container {
+  margin-top: 30px
+}
+
+.input__label-text{
+  margin: 10px 0 0 0;
+}
 
 .input__section {
   display: flex;
@@ -16,7 +23,7 @@
   color: white;
   font-weight: 500;
   font-size: 1.1em;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .input__section--field::placeholder {
