Pop up modal created and added to CoffeeSaver, Display History statement added, copyright mark fixed, about and history height fixed, input and coffee input change and calendar css changes

--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -23,5 +23,11 @@
 }
 
 .react-calendar__tile--active:enabled:focus {
-  background-color: #F3605F;
+  background-color: #C24040;
 }
+
+.react-calendar__tile--now {
+  background-color: #F3605F;
+  border-radius: 6px;;
+}
+
