--- a/src/components/DarkMode.css
+++ b/src/components/DarkMode.css
@@ -10,19 +10,18 @@
   border-radius: 50px;
   display: flex;
   justify-content: flex-end;
-  /* background-color: #F68460; */
   border: 2px solid #F68460; 
-  /* background-color: #F3605F; */
   position: relative;
   cursor: pointer;
   margin-top:10px
 }
 
 .toggle__notch {
+  position: absolute;
+  cursor: pointer;
   height: 45px;
   width: 45px;
   border-radius: 50%;
-  /* background-color: #F68460; */
   background-color: #F3605F;
   position: absolute;
   top: 3px;
@@ -32,7 +31,6 @@
 }
 
 .toggle__notch:hover {
-  /* background-color: #F68460; */
   background-color: #F3605F;
   transform: translate(30px, 0)
 }
